{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 14,
  "lineage": "97fa623e-b9be-8303-dcc1-8a76b7379546",
  "resources": [
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_server_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:internet-gateway/igw-02f3a65f95274e3f9",
            "id": "igw-02f3a65f95274e3f9",
            "owner_id": "858566417938",
            "tags": {
              "Name": "vpc_module_example1-web_server_igw"
            },
            "tags_all": {
              "Name": "vpc_module_example1-web_server_igw"
            },
            "vpc_id": "vpc-0bdd1156e9fe78a36"
          },
          "dependencies": [
            "module.basic_vpc.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:route-table/rtb-0a6bd324a562ab43a",
            "id": "rtb-0a6bd324a562ab43a",
            "owner_id": "858566417938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f3a65f95274e3f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_module_example1-web_server_rt"
            },
            "tags_all": {
              "Name": "vpc_module_example1-web_server_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd1156e9fe78a36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.basic_vpc.aws_internet_gateway.web_server_igw",
            "module.basic_vpc.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_server_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff3977f96d83214c",
            "route_table_id": "rtb-0a6bd324a562ab43a",
            "subnet_id": "subnet-051229d6253153e03"
          },
          "dependencies": [
            "module.basic_vpc.aws_internet_gateway.web_server_igw",
            "module.basic_vpc.aws_route_table.web_server_rt",
            "module.basic_vpc.aws_subnet.web_server_subnet",
            "module.basic_vpc.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:security-group/sg-09ecc47cf734f7b8f",
            "description": "Web security group (created by module)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ecc47cf734f7b8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 80 from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_module_example1-sg-Nha2RNCpsN8",
            "name_prefix": "",
            "owner_id": "858566417938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc_module_example1-sg-Nha2RNCpsN8"
            },
            "tags_all": {
              "Name": "vpc_module_example1-sg-Nha2RNCpsN8"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd1156e9fe78a36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.basic_vpc.aws_vpc.web_server_vpc",
            "module.basic_vpc.random_id.sg_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:subnet/subnet-051229d6253153e03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051229d6253153e03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "858566417938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_module_example1"
            },
            "tags_all": {
              "Name": "vpc_module_example1"
            },
            "vpc_id": "vpc-0bdd1156e9fe78a36"
          },
          "dependencies": [
            "module.basic_vpc.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:vpc/vpc-0bdd1156e9fe78a36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/16",
            "default_network_acl_id": "acl-0354d4582030dd517",
            "default_route_table_id": "rtb-0b2acf241386189c9",
            "default_security_group_id": "sg-06655f54222d81d93",
            "dhcp_options_id": "dopt-006eaa5a542fcab15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdd1156e9fe78a36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2acf241386189c9",
            "owner_id": "858566417938",
            "tags": {
              "Name": "vpc_module_example1"
            },
            "tags_all": {
              "Name": "vpc_module_example1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_server_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:internet-gateway/igw-01987190e67f80dd4",
            "id": "igw-01987190e67f80dd4",
            "owner_id": "858566417938",
            "tags": {
              "Name": "vpc_module_example2-web_server_igw"
            },
            "tags_all": {
              "Name": "vpc_module_example2-web_server_igw"
            },
            "vpc_id": "vpc-0c17a42b57e2711df"
          },
          "dependencies": [
            "module.basic_vpc_secondary.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:route-table/rtb-012f77cd96c05e87d",
            "id": "rtb-012f77cd96c05e87d",
            "owner_id": "858566417938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01987190e67f80dd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_module_example2-web_server_rt"
            },
            "tags_all": {
              "Name": "vpc_module_example2-web_server_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c17a42b57e2711df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.basic_vpc_secondary.aws_internet_gateway.web_server_igw",
            "module.basic_vpc_secondary.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_server_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f700c08108f7eec",
            "route_table_id": "rtb-012f77cd96c05e87d",
            "subnet_id": "subnet-0b482b03034466211"
          },
          "dependencies": [
            "module.basic_vpc_secondary.aws_internet_gateway.web_server_igw",
            "module.basic_vpc_secondary.aws_route_table.web_server_rt",
            "module.basic_vpc_secondary.aws_subnet.web_server_subnet",
            "module.basic_vpc_secondary.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:security-group/sg-04047b60eb0997728",
            "description": "Web security group (created by module)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04047b60eb0997728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 80 from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_module_example2-sg-Yt3ccAp6T-Q",
            "name_prefix": "",
            "owner_id": "858566417938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc_module_example2-sg-Yt3ccAp6T-Q"
            },
            "tags_all": {
              "Name": "vpc_module_example2-sg-Yt3ccAp6T-Q"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c17a42b57e2711df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.basic_vpc_secondary.aws_vpc.web_server_vpc",
            "module.basic_vpc_secondary.random_id.sg_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:subnet/subnet-0b482b03034466211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.98.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b482b03034466211",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "858566417938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_module_example2"
            },
            "tags_all": {
              "Name": "vpc_module_example2"
            },
            "vpc_id": "vpc-0c17a42b57e2711df"
          },
          "dependencies": [
            "module.basic_vpc_secondary.aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.basic_vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:858566417938:vpc/vpc-0c17a42b57e2711df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.98.0.0/16",
            "default_network_acl_id": "acl-0b3246fadc312667f",
            "default_route_table_id": "rtb-0625728adbfa2066e",
            "default_security_group_id": "sg-0a5d5bfd966a2075e",
            "dhcp_options_id": "dopt-006eaa5a542fcab15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c17a42b57e2711df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0625728adbfa2066e",
            "owner_id": "858566417938",
            "tags": {
              "Name": "vpc_module_example2"
            },
            "tags_all": {
              "Name": "vpc_module_example2"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}